<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Period</string>

    <string name="SearchBox_hint">Search…</string>

    <string name="menu_item_toolbar_search">Search</string>
    <string name="menu_item_toolbar_exit_search">Exit Search</string>
    <string name="menu_item_toolbar_sort">Sort</string>

    <string name="content_description_fab">Sort</string>

    <string name="ChemicalElementsFragment">Elements</string>
    <string name="ChemicalElementDetailsFragment">Details</string>

    <string name="MaterialDialog_title_sort">Sort by…</string>

    <string name="ChemicalElementDetailsView_kind">Kind</string>
    <string name="ChemicalElementDetailsView_atomic_mass">Atomic mass</string>
    <string name="ChemicalElementDetailsView_group">Group</string>
    <string name="ChemicalElementDetailsView_period">Period</string>
    <string name="ChemicalElementDetailsView_protons">Protons</string>
    <string name="ChemicalElementDetailsView_neutrons">Neutrons</string>
    <string name="ChemicalElementDetailsView_electrons">Electrons</string>
    <string name="ChemicalElementDetailsView_electronegativity">Electronegativity</string>
</resources>