<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingBottom="92dp"
    android:clipToPadding="false">

    <com.jeanbarrossilva.period.ui.layout.Column
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spacing="50dp">

        <com.jeanbarrossilva.period.ui.layout.Column
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            app:spacing="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="4dp"
                app:contentPadding="10dp"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/atomic_number_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="78" />

                    <TextView
                        android:id="@+id/symbol_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:text="Pt" />

                    <TextView
                        android:id="@+id/atomic_mass_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:text="195.084" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.jeanbarrossilva.period.ui.layout.Column
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:spacing="5dp">

                <TextView
                    android:id="@+id/name_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="35sp"
                    android:textColor="?android:textColorPrimary"
                    tools:text="Platinum" />

                <TextView
                    android:id="@+id/electron_configuration_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="4f¹⁴ 5d⁹ 6s¹" />

            </com.jeanbarrossilva.period.ui.layout.Column>

        </com.jeanbarrossilva.period.ui.layout.Column>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:contentPaddingTop="10dp"
            app:contentPadding="10dp"
            app:cardCornerRadius="20dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_kind"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/kind_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="Transition metal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_group"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/group_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="10" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_period"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/period_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="6" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_protons"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/protons_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="78" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_neutrons"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/neutrons_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="117" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_electrons"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/electrons_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="78" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="30dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/ChemicalElementDetailsView_electronegativity"
                        android:textStyle="bold"
                        android:textColor="?android:textColorPrimary" />

                    <TextView
                        android:id="@+id/electronegativity_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:textColor="?android:textColorPrimary"
                        tools:text="2.28" />

                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>

    </com.jeanbarrossilva.period.ui.layout.Column>

</ScrollView>